--- a/Dockerfile.db-init
+++ b/Dockerfile.db-init
@@ -8,8 +8,8 @@ RUN apt -y update \
 	
 WORKDIR /tmp/init
 
-COPY --chmod=700 docker/db/apply-migrations.sh .
-COPY docker/db/migrate.properties .
+COPY --chmod=700 docker-builds/db/apply-migrations.sh .
+COPY docker-builds/db/migrate.properties .
 
 COPY --from=mvn-backend:latest /backend/metasfresh-dist/dist/target/dist/sql ./sql
 COPY --from=mvn-backend:latest /backend/metasfresh-dist/dist/target/dist/install/lib .
