--- a/Dockerfile.backend.api
+++ b/Dockerfile.backend.api
@@ -5,7 +5,7 @@ RUN yum update -y && yum -y install nc && yum -y clean all && rm -rf /var/cache
 WORKDIR /opt/metasfresh/metasfresh-webui-api
 
 COPY --chmod=700 docker-builds/api/start.sh .
-COPY --from=mvn-backend:latest /backend/metasfresh-webui-api/target/docker/metasfresh-webui-api.jar .
-COPY --from=mvn-backend:latest /backend/metasfresh-webui-api/target/docker/configs/metasfresh.properties .
+COPY --from=metas-mvn-backend:latest /backend/metasfresh-webui-api/target/docker/metasfresh-webui-api.jar .
+COPY --from=metas-mvn-backend:latest /backend/metasfresh-webui-api/target/docker/configs/metasfresh.properties .
 
 CMD ["/opt/metasfresh/metasfresh-webui-api/start.sh"]
