--- a/Dockerfile.camel
+++ b/Dockerfile.camel
@@ -17,7 +17,7 @@ ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 COPY docker-builds/java-mvn/mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
 COPY docker-builds/java-mvn/settings-docker.xml /usr/share/maven/ref/
 
-COPY --from=mvn-common:latest /root/.m2 /root/.m2/
+COPY --from=metas-mvn-common:latest /root/.m2 /root/.m2/
 
 WORKDIR /camel
 COPY misc/services/camel .
