--- a/Dockerfile.camel.externalsystems
+++ b/Dockerfile.camel.externalsystems
@@ -2,6 +2,6 @@ FROM adoptopenjdk:14.0.2_8-jdk-hotspot
 
 WORKDIR /app
 
-COPY --from=mvn-camel:latest /camel/de-metas-camel-externalsystems/core/target/uber/de-metas-camel-externalsystems-core.jar .
+COPY --from=metas-mvn-camel:latest /camel/de-metas-camel-externalsystems/core/target/uber/de-metas-camel-externalsystems-core.jar .
 
 CMD ["java", "-jar", "/app/de-metas-camel-externalsystems-core.jar"]
