--- a/.github/workflows/experimenting-with-github-actions.yaml
+++ b/.github/workflows/experimenting-with-github-actions.yaml
@@ -11,15 +11,26 @@ jobs:
         run: docker buildx build -f Dockerfile.backend -t metas-mvn-backend:latest .
       - name: build-camel
         run: docker buildx build -f Dockerfile.camel -t metas-mvn-camel:latest .
+      
       - name: build-api
-        run: docker buildx build -f Dockerfile.backend.api -t metas-api:latest .
+        run: docker buildx build -f Dockerfile.backend.api -t mazorn/metas-api:latest .
       - name: build-app
-        run: docker buildx build -f Dockerfile.backend.app -t metas-app:latest .
+        run: docker buildx build -f Dockerfile.backend.app -t mazorn/metas-app:latest .
       - name: build-externalsystems
         run: docker buildx build -f Dockerfile.camel.externalsystems -t metas-externalsystems:latest .
       - name: build-frontend
-        run: docker buildx build -f Dockerfile.frontend -t metas-frontend:latest .
+        run: docker buildx build -f Dockerfile.frontend -t mazorn/metas-frontend:latest .
       - name: build-db
-        run: docker buildx build -f Dockerfile.db -t metas-db:latest .
+        run: docker buildx build -f Dockerfile.db -t mazorn/metas-db:latest .
       - name: build-db-init
-        run: docker buildx build -f Dockerfile.db-init -t metas-db-init:latest .
+        run: docker buildx build -f Dockerfile.db-init -t mazorn/metas-db-init:latest .
+
+      - name: push-images
+        run: |
+          echo "cdcc4a12-e97d-479a-85d3-9cb006aa771c" | docker login --username mazorn --password-stdin
+          docker push mazorn/metas-api:latest
+          docker push mazorn/metas-app:latest
+          docker push mazorn/metas-frontend:latest
+          docker push mazorn/metas-db:latest
+          docker push mazorn/metas-db-init:latest
+          docker logout
